feat(frontend): Inclusión de hover al seleccionar pestaña

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <title>Burned - Recetas</title>
+    <meta name="description" content="Burned es una plataforma para gestionar, crear y compartir recetas de cocina. Únete a nuestra comunidad, descubre nuevos platos y organiza tus comidas con herramientas inteligentes." />
+
+    <meta property="og:title" content="Burned - Plataforma de Recetas Full Stack" />
+    <meta property="og:description" content="Descubre Burned: Gestión de recetas con IA, Go y React. Crea, comparte y cocina." />
+    <meta property="og:image" content="LINK_A_UNA_FOTO_TUYA_O_DEL_LOGO.png" />
+    <meta property="og:url" content="https://burned-frontend.onrender.com" />
   </head>
   <body>
     <div id="root"></div>
